# nb-service-prices-and-tax-rates

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: format.yml
data/: inconsistent_munis.xlsx
data/data_clean/: GNB2024_pol_prov.xlsx
data/data_final/: data_bgt_exps.xlsx  data_bgt_revs.xlsx  data_cmp_data.xlsx  data_master.xlsx  data_pol_prov.xlsx  data_tax_base.xlsx
data/meow/: README.md  bgt_exps.csv  bgt_revs.csv  cmp_demo.csv  cpi_defl_2002.csv  main.csv  meow.py  pol_prov_2024.csv
sandbox/10_ddd/: ddd.py  ddd_table.py  ddd_table_standalone.tex
sandbox/11_taxbase_regs_pt2/: taxbase_regs_pt2.py
sandbox/1_initial_plots/: exp_plots.py  initial_plots.py  tax_plots.py
sandbox/2_ppsa_groups/: ppsa_groups.py
sandbox/3_clustering/: clustering.py
sandbox/4_basic_ols/: basic_ols.py
sandbox/5_coef_hists/: coef_hists.py
sandbox/6_coef_scatters/: coef_scatters.py
sandbox/7_share_groups/: share_groups.py
sandbox/8_capita_regs/: capita_regs.py
sandbox/9_taxbase_regs/: taxbase_regs.py
src/data_processing/: 1_raw_to_xlsx.py  2_xlsx_to_clean.py  3_clean_to_final.py  4_inconsistent_munis.py  utils.py
temp/: capita_fe_regression.py  capita_fixed_regression.py  capita_regression.py  share_regression.py  tb_fe_regression.py  tb_regression.py
temp-figs/: figures.py
temp-inflation/: 1810000501-eng.csv  analysis.py  cleanup.py  cpi_deflator.csv
temp-inflation/results/: reg_adj_base_table_standalone.tex  reg_adj_rate_table_standalone.tex  reg_raw_base_table_standalone.tex  reg_raw_rate_table_standalone.tex
temp-three/: analysis.py
temp-three/results/: reg_diff_table_standalone.tex  reg_rate_table_standalone.tex
temp-yoy/: analysis.py
temp-yoy/results/: reg_diff_mpsa_table_standalone.tex  reg_diff_table_standalone.tex  reg_rate_mpsa_table_standalone.tex  reg_rate_table_standalone.tex
temp/clustering/: clustering.py  clustering.txt  clustering2.py
temp/models/: model1.py  model2.py  model3.py
temp/non_ppsa/: group_assignments_non_ppsa.txt  grouped_plots_non_ppsa.py
temp/plots/: exp_plots.py  initial_plots.py
temp/ppsa/: group_assignments_ppsa.txt  grouped_plots_ppsa.py
temp/scatter_hist/: hist.py  scatter.py  scatter2.py
temp/tex/: capita_fe_regression_2012plus.tex  capita_fe_regression_full.tex  capita_regression_full.tex  capita_regression_int.tex  (+5 more)
(+409 files in other folders)
